# dbsdk

./: .env.example  .gitignore  JSONSCHEMA.md  LICENSE  OPENAPI.md  README.md  README_EN.md  install.sh  pyproject.toml  requirements.txt
data_builder/: __init__.py  builder.py  combination_builder.py  combinations.py  config.py  exceptions.py  filters.py  generators.py
data_builder/data/: bank_bins.json  region_codes.json
data_builder/openapi/: __init__.py  converter.py  manager.py  models.py  parser.py  request_generator.py  response_generator.py
data_builder/strategies/: __init__.py
data_builder/utils/: __init__.py  invalid_data.py
docs/: JSON Schema_ A Media Type for Describing JSON Documents.mhtml
docs/openapi/: petstore.json
examples/: README.md  run_all.py
examples/advanced/: gen_concat.py  gen_custom_strategy.py  gen_llm.py
examples/basic/: gen_bank_card.py  gen_datetime.py  gen_email.py  gen_enum.py  gen_id_card.py  gen_metric.py  gen_network.py  gen_password.py  gen_phone.py  gen_regex.py  gen_token.py  gen_username.py
examples/config/: gen_from_config.py  policy.yaml
examples/integration/: gen_boundary_test.py  gen_error_handling.py  gen_order.py
examples/openapi/: gen_openapi_request.py  gen_openapi_response.py  openapi_advanced.py  openapi_field_policies.py  openapi_quickstart.py
examples/schema_features/: gen_combination.py  gen_prefix_items.py  gen_recursive.py  gen_schema_combinators.py  gen_union_type.py
examples/structure/: gen_post_filters.py  gen_structure.py
skills/gen-data/: SKILL.md
tests/: README.md  conftest.py
(+112 files in other folders)
